--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#26ade0"
+    android:background="@color/colorPrimaryDark"
     android:paddingTop="16dp"
     tools:context=".MainActivity">
 
@@ -17,8 +17,8 @@
         android:paddingTop="20dp"
         android:paddingBottom="30dp"
         android:text="@string/lblHeader"
-        android:textColor="#000000"
-        android:textFontWeight="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
         android:textSize="20sp" />
 
     <ImageView
@@ -38,7 +38,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="97dp"
-        android:background="#3F51B5"
+        android:background="@color/colorPrimary"
         android:text="@string/btnShuffle"
         android:textColor="@android:color/background_light"
         android:textSize="20sp" />
