--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:paddingTop="20dp"
         android:paddingBottom="30dp"
         android:text="@string/lblHeader"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/textBlack"
         android:textStyle="bold"
         android:textSize="20sp" />
 
